--- a/frontend/home.html
+++ b/frontend/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <title>Care Sync</title>
 </head>
@@ -9,13 +9,13 @@
 
 <h1>CareSync</h1>
 <h2>
-    <a href="All Tasks.html">All Tasks</a>
+    <a href="all tasks.html">All Tasks</a>
 </h2>
 <h3>
-    <a href="Medication Tracker.html">Medication Tracker</a>
+    <a href="medication tracker.html">Medication Tracker</a>
 </h3>
 <h4>
-    <a href="Task Manager.html">Task Manager</a>
+    <a href="task manager.html">Task Manager</a>
 </h4>
 
 </body>
