--- a/frontend/home.html
+++ b/frontend/home.html
@@ -7,16 +7,23 @@
 </head>
 <body>
 
+<button class="right" style="font-size:100%;">logout</button>
+<br>
+
 <h1>CareSync</h1>
+<br>
+
 <h2>
     <a href="all tasks.html">All Tasks</a>
 </h2>
-<h3>
+
+<h2>
     <a href="medication tracker.html">Medication Tracker</a>
-</h3>
-<h4>
+</h2>
+
+<h2>
     <a href="task manager.html">Task Manager</a>
-</h4>
+</h2>
 
 </body>
 </html>
