--- a/frontend/task manager.html
+++ b/frontend/task manager.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <title>Care Sync</title>
 </head>
