--- a/frontend/task manager.html
+++ b/frontend/task manager.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="style.css">
+    <script src="scripts.js"></script>
 </head>
 <title>Care Sync</title>
 </head>
