Added create account checker. Only need to link to database.

--- a/frontend/home.html
+++ b/frontend/home.html
@@ -8,12 +8,15 @@
 </head>
 <body>
 
+<!-- Logout button -->
 <button class="right" style="font-size:100%;">logout</button>
 <br>
 
+<!-- Main title/header -->
 <h1>CareSync</h1>
 <br>
 
+<!-- Headers that link to different services -->
 <h2>
     <a href="all tasks.html">All Tasks</a>
 </h2>
