--- a/frontend/login.html
+++ b/frontend/login.html
@@ -8,19 +8,23 @@
 </head>
 <body>
 
+<!-- Main title/header -->
 <h1>CareSync</h1>
 <br>
 
+<!-- Login box -->
 <div class="login">
     <h3>Sign In</h3>
+    <!-- Form to get user input -->
     <form>
         <label for="username"></label>
         <input type="text" id="username" name="username" placeholder="Username"><br><br>
         <label for="password" placeholder="Password"></label>
-        <input type="text" id="password" name="password" placeholder="Password"><br><br>
+        <input type="password" id="password" name="password" placeholder="Password"><br><br>
         <input type="button" value="Sign in" onclick="signInClick()">
         <br><br><br>
     </form>
+    <!-- Links users to create an account -->
     <a href="create account.html" style="font-size:13px">Create Account</a>
 </div>
 
